# Scheme

./: .gitignore  CMakeLists.txt  README.md
include/: error.h  globals.h  parser.h  scheme.h  tokenizer.h
include/objects/: cell.h  dot.h  number.h  object.h  quote.h  symbol.h
include/objects/keywords/: and.h  bool_predicate.h  define.h  if.h  lambda.h  not.h  number_predicate.h  or.h  set.h
include/objects/operations/: addition.h  division.h  equal.h  greater.h  less.h  multiplication.h  subtraction.h
include/objects/specials/: dot.h  null.h  quote.h  scope.h
include/objects/types/: bool.h  cell.h  function.h  number.h  symbol.h
src/: main.cpp  parser.cpp  scheme.cpp  tokenizer.cpp
